--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 		<main>
 			<!-- Projects-->
-				<div class="container-fluid" id="projects">
+				<div class="container-fluid pb-5" id="projects">
 					
 					<div class="container-fluid">
 						<div class="row pt-5 pb-5 justify-content-center">
